--- a/doc/pages/QMLList.dox
+++ b/doc/pages/QMLList.dox
@@ -1,8 +1,8 @@
 /**
 
-@page qmlList List of QML modules
+@page qmlList List of QML extensions
 
-Here's a list of documented QML modules.
+Here's a list of documented QML extensions.
 
 @includedoc Makefile.project/QMLList.inc.dox
 
